# rotogrinders-resultsdb-crawler

./: .gitignore  CHANGELOG.rst  Dockerfile  README.md  gitignore  main.py  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg  setup.py
hercules/: __init__.py  items.py  middlewares.py  pipelines.py  resultsdb_main.py  settings.py
hercules/spiders/: results_selenium.py
