[build-system]
requires = ['poetry-core>=1.0.3']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'hercules'
version = '0.0.1'
description = 'Web Scraper for Rotogrinders'
authors = ['Blake Johnson <blakeejohnson39@gmail.com>']
readme = 'README.md'
homepage = 'https://github.com/johnson2427/hercules'
repository = 'https://github.com/johnson2427/hercules'
include = ['README.md', 'CHANGELOG.rst']
packages = ['hercules']
classifiers = [
    'Development Status :: Production',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3'
]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
pymongo = "^3.11.2"
Scrapy = "^2.4.1"
selenium = "^3.141.0"

