[metadata]
name = hercules
version = 0.0.1
author = Minerva Data Engineering
author_email = blakeejohnson39@gmail.com
description = Pulls and stores MLB data for Backtesting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnson2427/hercules
project_urls =
    Bug Tracker = https://github.com/johnson2427/hercules/issues
classifiers =
    Programming Language :: Python :: 3
    License :: NONE
    Operating System :: Ubuntu

[options]
package_dir =
    = hercules
python_requires = >= 3.8
